--- a/form_letter.erb
+++ b/form_letter.erb
@@ -13,7 +13,7 @@
   </p>
 
   <table>
-  <tr><th>NAme</th><th>Website</th></tr>
+  <tr><th>Name</th><th>Website</th></tr>
     <% legislators.each do |legislator| %>
       <tr>
         <td><%= "#{legislator.first_name} #{legislator.last_name}" %></td>
